--- a/ConviteVip/index.html
+++ b/ConviteVip/index.html
@@ -40,7 +40,7 @@
       <input class="formes" type="text" name="Acompanhante" placeholder="Acompanhante">
       <input class="formes" type="text" name="Telefone" placeholder="Telefone*" required>
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://campana32.github.io/gabrielcampana_portifolio/">
+      <input type="hidden" name="_next" value="https://natisantos28.github.io/ConviteVip/ConviteVip/index.html">
       <button class="Envi" type="submit">ENVIAR</button>
     </form>
   </section>
